--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*~
+*.swp
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -41,6 +44,7 @@ coverage.xml
 .mr.developer.cfg
 .project
 .pydevproject
+.settings*
 
 # Rope
 .ropeproject
